--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.13.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.15.0",
