--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-firebase/firestore": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-native-material/core": "^1.3.7",
@@ -30,6 +31,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-inputs": "^7.4.0",
     "react-native-pager-view": "^6.2.3",
