--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@react-navigation/stack": "^6.3.21",
     "firebase": "^10.13.0",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "^0.73.9",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-inputs": "^7.4.0",
